Stromzähler/static/Management.css
#control {
    margin: 5px 5px;
    padding: 5px 5px;
    border: black 1px solid;
}

#info {
    margin: 5px 5px;
    padding: 5px 5px;
    border: black 1px solid;

}

#info_content {
    height: 300px;
    width: 100%;
    white-space: pre;
    overflow-y: auto;
}

#overlay {
    position: fixed;
    display: None;
    align-items: center;
    justify-content: center;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0,0.5);
    z-index: 9999;
}

#overlay-box {
    border-radius: 3%;
    border: white 3px solid;
    padding: 20px;
}

.mails {
    word-wrap: break-word;
}

